syntax = "proto3";

package webapi.cart;

import "api.proto";
import "webapi/common.proto";

option go_package = "/webapi/cart";

message AddCartReq {
  uint32 product_id = 1 [(api.form) = "productId"];
  int32 product_num = 2 [(api.form) = "productNum"];
}

service CartService {
  rpc AddCartItem(AddCartReq) returns (common.Empty) {
    option (api.post) = "/cart";
  }
  rpc GetCart(common.Empty) returns (common.Empty) {
    option (api.get) = "/cart";
  }
}