syntax = "proto3";

package webapi.product;

import "api.proto";
import "webapi/common.proto";

option go_package = "webapi/product";

message ProductReq {
  uint32 id = 1 [(api.query) = "id"];
}

message SearchProductsReq {
  string q = 1 [(api.query) = "q"];
}

service ProductService {
  rpc GetProduct(ProductReq) returns (common.Empty) {
    option (api.get) = "/product";
  }
  rpc SearchProducs(SearchProductsReq) returns (common.Empty) {
    option (api.get) = "/search";
  }
}